--- a/imc_calc/src/components/Button.css
+++ b/imc_calc/src/components/Button.css
@@ -1,7 +1,7 @@
 button {
     text-transform: uppercase;
-    padding: 1rem, 1.5rem;
-    background-color: #F44236;
+    padding: 1rem 1.5rem;
+    background-color: #f44236;
     border: none;
     color: #fff;
     cursor: pointer;
